welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Int
  avance(nbPas)
        ^Program:6: error: type mismatch;
 found   : Unit
 required: Int
    recule()
          ^