welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas:Int, versLAvant:Boolean): Int= {
  if (versLAvant)
  avance(nbPas)
  else {
    recule()
  }
}